# Hidden-Treasures-BG

./: .gitignore  CMakeLists.txt
docs/: analysis.md  annotation.md  visual_preview.html
include/: Application.hpp  CulturalResource.hpp  NaturalResource.hpp  PlaceOfInterest.hpp  TouristAttraction.hpp  Village.hpp
src/: Application.cpp  CulturalResource.cpp  NaturalResource.cpp  PlaceOfInterest.cpp  TouristAttraction.cpp  Village.cpp  main.cpp
